<resources>
    <string name="app_name">K-app</string>

    <string name="challenge_current_level_format">%1$d/%2$d</string>

    <!-- Level progress text -->
    <string name="level_beginner">Beginner</string>
    <string name="level_intermediate">Intermediate</string>
    <string name="level_progression">Progression</string>
    <string name="level_custom">Custom</string>
    <string name="challenge_pushup_name">The Pushup</string>
    <string name="challenge_pullup_name">The Pullup</string>
    <string name="challenge_squat_name">The Squat</string>
    <string name="challenge_leg_raise_name">The Leg Raise</string>
    <string name="challenge_bridge_name">The Bridge</string>
    <string name="challenge_handstand_pushup_name">The Handstand Pushup</string>

    <!-- Home screen -->
    <string name="home_screen_manage_template_menu">Menage template</string>
    <string name="home_screen_manage_user_menu">Menage user</string>
    <string name="home_hello_user_text">Hello $User</string>

    <!-- TodayChallenges screen -->
    <string name="your_challenges_title">Your Challenges!</string>
    <string name="your_challenges_menu_template_data">Load data from template</string>
    <string name="your_challenges_menu_delete_all">Delete all</string>
    <string name="challenge_list_delete_msg">Are you sure you want to remove this challenge?</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_confirm">Confirm</string>

    <!-- ChalllengeEdit screen -->
    <string name="challenge_settings_confirm">Confirm</string>
    <string name="challenge_name_label_text">Challenge name:</string>
    <string name="challenge_step_label_text">Challenge Step:</string>
    <string name="challenge_step_progresslabel_text">Step progress:</string>
    <string name="challenge_goal_label_text">Goal:</string>
    <string name="challenge_series_label_text">Series:</string>
    <string name="challenge_item_goal_text">Goal</string>
    <string name="challenge_finish_button_desc">finish challenge button</string>
    <string name="challenge_settings_button_desc">settings challenge button</string>
    <string name="edit_challenge_title">Edit Challenge</string>
    <string name="new_challenge_title">Add new Challenge</string>

    <!-- Template screen -->
    <string name="template_name_label_text">Template name:</string>
    <string name="challenges_for_template_label_text">Add challenge:</string>
    <string name="template_add_new_button_label">Add new…</string>
    <string name="template_challenge_delete_button_desc">template challenge delete button</string>

    <!-- RoundCalendarView -->
    <string name="show_progress_templ_text">%1$d/%2$d</string>
    <string name="round_calendar_left_buttont_desc">left</string>
    <string name="round_calendar_right_button_desc">right</string>
    <string name="round_calendar_expand_button_desc">expand calendar button</string>

    <!-- Template list screen -->
    <string name="template_edit_button_desc">template edit button</string>
    <string name="template_delete_button_desc">template delete button</string>
    <string name="template_list_header">Your templates:</string>
    <string name="template_list_dialog_title">Templates list</string>
</resources>
